# Patina

./: .gitignore  LICENSE  LICENSE-APACHE  README.md  package.json  vitest.config.js
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: content.rs  dir_size.rs  duplicates.rs  file_index.rs  fs.rs  indexing.rs  mod.rs  relationships.rs  system.rs  tags.rs  versions.rs  watch.rs
src-tauri/src/fs/: lister.rs  mod.rs  operations.rs
src-tauri/src/index/: chunker.rs  content_index.rs  db.rs  dir_agg.rs  edges.rs  file_index.rs  files.rs  mod.rs  path_bounds.rs  path_key.rs  quick_access.rs  tags.rs  text_detect.rs  usn_position.rs  version_compress.rs  versions.rs
src-tauri/src/index/schema/: 0001_tags.sql  0002_files.sql  0003_versions.sql  0004_relationships.sql  0005_file_index.sql  0006_file_edges.sql  0007_quick_access.sql  0008_usn_position.sql  0009_dir_agg.sql  0010_version_label.sql  0011_version_strategy.sql  0012_version_chunks.sql  0013_dict_zstd_count.sql
src-tauri/src/indexer/: dups.rs  hasher.rs  links.rs  mod.rs  scanner.rs  usn_journal.rs
src-tauri/src/models/: file.rs  mod.rs
src-tauri/src/platform/: mod.rs  windows.rs
src/js/: main.js
src/js/api/: content.js  dir_size.js  duplicates.js  events.js  fs.js  indexing.js  invoke.js  relationships.js  system.js  tags.js  versions.js
src/js/components/: breadcrumbs.js  command-palette.js  confirm-dialog.js  context-menu.js  divider.js  duplicate-panel.js  file-panel.js  (+6 more)
src/styles/: base.css  layout.css  tokens.css
src/test/: setup.js
(+78 files in other folders)
