[package]
name = "patina"
version = "0.1.0"
edition = "2024"
description = "Patina — experimental file manager"
authors = ["KypoHeko"]
license = "MIT OR Apache-2.0"

[lib]
name = "patina_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
open = "5.3.3"
trash = "5.2.5"
fs_extra = "1.3.0"
rusqlite = { version = "0.39", features = ["bundled"] }
walkdir = "2.5.0"
blake3 = "1.8.5"
zstd = "0.13.2"
tempfile = "3.24.0"
aho-corasick = "1.1.4"
sysinfo = "0.38.4"
image = "0.25.9"
notify = "8.2.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_Shell",                   # SHGetFileInfo, IFileOperation, SHGetKnownFolderPath
  "Win32_Storage_FileSystem",         # USN Journal, GetVolumeInformation, GetDriveType, GetDiskFreeSpaceEx
  "Win32_Foundation",                 # HANDLE, BOOL, CloseHandle
  "Win32_Security",                   # SECURITY_ATTRIBUTES — required by the CreateFileW signature
  "Win32_System_Com",                 # CoInitializeEx, CoCreateInstance, CoTaskMemFree
  "Win32_System_IO",                  # DeviceIoControl
  "Win32_Graphics_Gdi",               # CreateCompatibleDC, GetDIBits, SelectObject, BITMAPINFO
  "Win32_UI_WindowsAndMessaging",     # DestroyIcon, GetIconInfo
] }
